force-app/main/default/objects/clofor_com_cfs__GoodsPOProduct__c/fields/clofor_com_cfs__AmountOfBuyingTax__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountOfBuyingTax__c</fullName>
    <label>AMOUNT OF BUYING TAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>