force-app/main/default/objects/clofor_com_cfs__GoodsPOProduct__c/fields/clofor_com_cfs__AmountOfBuyingTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountOfBuyingTaxFCY__c</fullName>
    <label>Amount of Buying Tax(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>