force-app/main/default/objects/clofor_com_cfs__GoodsPOProduct__c/fields/clofor_com_cfs__BuyingAmountInclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyingAmountInclTaxFCY__c</fullName>
    <label>Buying Amount incl Tax(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>