force-app/main/default/objects/clofor_com_cfs__GoodsPOProduct__c/fields/clofor_com_cfs__BuyingUnitPriceFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyingUnitPriceFCY__c</fullName>
    <inlineHelpText>In case The Product is Unit Base, Buying Unit Price(FCY)=Buying Unit Price(FCY) 
In case The Product is Weight Base, Buying Unit Price(FCY)=Buying Unit Price(FCY)/Kg or Gram</inlineHelpText>
    <label>Buying Unit Price(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>