force-app/main/default/objects/clofor_com_cfs__GoodsPOProduct__c/fields/clofor_com_cfs__BuyingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyingUnitPriceLocal__c</fullName>
    <inlineHelpText>In case The Product is Unit Base, Buying Unit Price(Local)=Buying Unit Price(Local)
In case The Product is Weight Base, Buying Unit Price(Local)=Buying Unit Price(Local)/Kg or Gram</inlineHelpText>
    <label>Buying Unit Price(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>