force-app/main/default/objects/clofor_com_cfs__GoodsPOProduct__c/fields/clofor_com_cfs__ExchangeRateID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExchangeRateID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange Rate ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__MgmtMaster__c.clofor_com_cfs__Mgmt_Exrate_Validity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__MgmtMaster__c</referenceTo>
    <relationshipLabel>GOODS P/O+PRODUCT</relationshipLabel>
    <relationshipName>GoodsPOProduct</relationshipName>
    <type>Lookup</type>
</CustomField>