force-app/main/default/objects/clofor_com_cfs__GoodsPOProduct__c/fields/clofor_com_cfs__Expirationdate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Expirationdate__c</fullName>
    <label>Expiration date</label>
    <type>Date</type>
</CustomField>