force-app/main/default/objects/clofor_com_cfs__GoodsPOProduct__c/fields/clofor_com_cfs__FinalQuantityAllUnit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FinalQuantityAllUnit__c</fullName>
    <formula>clofor_com_cfs__FinalQuantity__c * clofor_com_cfs__ProductID__r.clofor_com_cfs__QuantityPerUnit__c</formula>
    <label>Total Final Quantity In All Units</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>