force-app/main/default/objects/clofor_com_cfs__GoodsPOProduct__c/fields/clofor_com_cfs__GoodsPOID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GoodsPOID__c</fullName>
    <label>GOODS PURCHASING ORDER ID</label>
    <referenceTo>clofor_com_cfs__GoodsPurchasingOrder__c</referenceTo>
    <relationshipLabel>GOODS P/O+PRODUCT</relationshipLabel>
    <relationshipName>GoodsPOProduct</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>