force-app/main/default/objects/clofor_com_cfs__GoodsPOProduct__c/fields/clofor_com_cfs__ProductNetWeightKg__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProductNetWeightKg__c</fullName>
    <formula>clofor_com_cfs__ProductID__r.clofor_com_cfs__NETWeight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRODUCT NET WEIGHT(Kg)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>