force-app/main/default/objects/clofor_com_cfs__GoodsPOProduct__c/fields/clofor_com_cfs__ProductQRCodeImage__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProductQRCodeImage__c</fullName>
    <formula>clofor_com_cfs__ProductID__r.clofor_com_cfs__QR_Image__c</formula>
    <label>PRODUCT QR CODE IMAGE</label>
    <type>Text</type>
</CustomField>