force-app/main/default/objects/clofor_com_cfs__GoodsPOProduct__c/fields/clofor_com_cfs__Total_Buying__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Total_Buying__c</fullName>
    <formula>clofor_com_cfs__FinalQuantity__c * clofor_com_cfs__BuyingUnitPriceLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Buying</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>