force-app/main/default/objects/clofor_com_cfs__GoodsPOProduct__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__GoodsPOID__c</columns>
    <columns>clofor_com_cfs__ProductName__c</columns>
    <columns>clofor_com_cfs__FinalQuantity__c</columns>
    <columns>clofor_com_cfs__PlanQuantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>